[gd_scene load_steps=20 format=3 uid="uid://cehmaqfwfofgi"]

[ext_resource type="Script" path="res://scenes/entities/slime/lesser_slime/lesser_slime.gd" id="1_34ieu"]
[ext_resource type="Script" path="res://scripts/classes/state_machine.gd" id="4_784tw"]
[ext_resource type="AudioStream" uid="uid://cxtmfj3w4x52q" path="res://assets/sfx/pixabay_splat.mp3" id="4_u85u2"]
[ext_resource type="Script" path="res://scenes/entities/slime/states/chase.gd" id="5_45glc"]
[ext_resource type="Script" path="res://scenes/entities/slime/states/patrol.gd" id="8_ucdfw"]

[sub_resource type="Gradient" id="Gradient_5evnp"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nght8"]
resource_local_to_scene = true
noise_type = 3
seed = 1
fractal_type = 0
domain_warp_enabled = true
domain_warp_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tuyge"]
resource_local_to_scene = true
width = 128
height = 128
seamless = true
color_ramp = SubResource("Gradient_5evnp")
noise = SubResource("FastNoiseLite_nght8")

[sub_resource type="Gradient" id="Gradient_uc1da"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_plgf3"]
noise_type = 3
domain_warp_enabled = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_v8hk2"]
width = 256
height = 256
color_ramp = SubResource("Gradient_uc1da")
noise = SubResource("FastNoiseLite_plgf3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pddxb"]
resource_local_to_scene = true
render_priority = 1
transparency = 1
albedo_texture = SubResource("NoiseTexture2D_tuyge")
emission = Color(1, 1, 1, 1)
emission_operator = 1
emission_texture = SubResource("NoiseTexture2D_v8hk2")

[sub_resource type="SphereMesh" id="SphereMesh_t10v8"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_pddxb")
radius = 1.0
radial_segments = 5
rings = 4
is_hemisphere = true

[sub_resource type="SphereShape3D" id="SphereShape3D_fhdrr"]
resource_local_to_scene = true
radius = 1.1

[sub_resource type="SphereShape3D" id="SphereShape3D_b7opb"]
resource_local_to_scene = true
radius = 0.75

[sub_resource type="Animation" id="Animation_r0s41"]
resource_name = "bounce"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 0.7, 1), Vector3(1, 2, 1), Vector3(1, 0.7, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 4.0,
"start_offset": 1.8,
"stream": ExtResource("4_u85u2")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_ykjsg"]
resource_name = "knocked"

[sub_resource type="Animation" id="Animation_8yhqw"]
resource_name = "launch"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2),
"transitions": PackedFloat32Array(1, 1, 0.0441942),
"update": 0,
"values": [Vector3(1, 0.7, 1), Vector3(1, 2, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 2.0,
"start_offset": 4.2,
"stream": ExtResource("4_u85u2")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6bhw"]
_data = {
"bounce": SubResource("Animation_r0s41"),
"knocked": SubResource("Animation_ykjsg"),
"launch": SubResource("Animation_8yhqw")
}

[node name="LesserSlime" type="CharacterBody3D" groups=["enemies"]]
collision_layer = 4
collision_mask = 8
input_ray_pickable = false
floor_stop_on_slope = false
platform_floor_layers = 4278190088
platform_wall_layers = 8
script = ExtResource("1_34ieu")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_784tw")
initial_state = NodePath("Patrol")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_45glc")
enemy = NodePath("../..")

[node name="Patrol" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_ucdfw")
enemy = NodePath("../..")

[node name="Mesh" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.7, 0, 0, 0, 1, 0, 0, 0)

[node name="Model" type="MeshInstance3D" parent="Mesh"]
sorting_offset = 1.0
cast_shadow = 0
lod_bias = 0.001
mesh = SubResource("SphereMesh_t10v8")

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 25

[node name="Area" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("SphereShape3D_fhdrr")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("SphereShape3D_b7opb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t6bhw")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
max_db = 1.0
max_distance = 20.0
bus = &"Sfx"

[node name="HealthBar" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
visibility_range_end = 40.0
visibility_range_end_margin = 10.0
visibility_range_fade_mode = 1
billboard = 1
font_size = 64

[node name="VisibilityTimer" type="Timer" parent="HealthBar"]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Hitbox" to="StateMachine/Chase" method="_on_hitbox_body_entered"]
[connection signal="timeout" from="HealthBar/VisibilityTimer" to="." method="_on_visibility_timer_timeout"]
